sonar-postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar-postgres
  namespace: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sonar-postgres
  template:
    metadata:
      name: sonar-postgres
      labels:
        name: sonar-postgres
    spec:
      containers:
        - image: postgres:12.1
          name: sonar-postgres
          ports:
            - containerPort: 5432
              name: postgresport
          volumeMounts:
            # This name must match the volumes.name below.
            - name: data-disk
              mountPath: /var/lib/postgresql/pgdata
      volumes:
        - name: data-disk
          persistentVolumeClaim:
            claimName: claim-postgres
