sonarqube-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: sonar
  name: sonar
  namespace: sonarqube
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9000
      name: sonarport
  selector:
    name: sonarqube
