sonar-ingress-aws.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: 	""
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTP": 9000},{"HTTPS":
      443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: ""
    alb.ingress.kubernetes.io/subnets: ""
    alb.ingress.kubernetes.io/success-codes: 301,302,200
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  labels:
    app: sonarqube
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: ingress-sonar
          servicePort: 9000
        path: /*
